--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  color: black;
   box-sizing: border-box;
 }
 
 body {
   min-height: 100vh;
-  background-color: #e7e7e7;
+  background-color: #ffffff;
   font-family: "Raleway", sans-serif;
 }
 
