--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,69 +1,11 @@
-* {
-  margin: 0;
-  padding: 0;
-  color: black;
-  box-sizing: border-box;
+/*Ajustes*/
+:root{
+  --color1: #502F4C;
+  --color2: #70587C;
+  --color3: #C8B8DB;
+  --color4: #F9F4F5;
 }
-
-body {
-  min-height: 100vh;
-  background-color: #ffffff;
-  font-family: "Raleway", sans-serif;
-}
-
-.titulo {
-  font-size: 40px;
-  font-family: "Dancing Script", cursive;
-  margin-bottom: 40px;
-  color: #fff;
-}
-
-.subtitulo {
-  margin: 0;
-  color: #000;
-  display: inline;
-  font-size: 50px;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-.sabor {
-  color: #fff;
-  margin: 7px 0;
-  font-size: 50px;
-  font-weight: 600;
-  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);
-  font-family: "Dancing Script", cursive;
-  margin-top: 0;
-}
-
-.linea-division {
-  width: 80%;
-  height: 2px;
-  background-color: #36221c;
-}
-
-/*Estilos de materialize*/
-.carousel {
-  min-height: 500px;
-}
-.carousel .carousel-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-  width: 500px;
-  height: 500px;
-}
-
-.carousel .carousel-item img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  border-radius: 15px;
+/*Navbar*/
+.cab{
+  background-color: var(--color1);
 }
